Bug 1014258 - Make sure JSEventHandler's CanSkip is called. r=mccr8, a=sledru